k8s/engine/service.yml
apiVersion: v1
kind: Service
metadata:
  name: warden-engine
  namespace: warden
spec:
  selector:
    app: warden-engine
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  type: ClusterIP
