k8s/engine/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: warden-engine
  namespace: warden
spec:
  ingressClassName: nginx
  rules:
    - host: engine.warden.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: warden-engine
                port:
                  number: 8081
